--- a/templates/module.tmpl
+++ b/templates/module.tmpl
@@ -1,9 +1,5 @@
-import { NgModule } from '@angular/core';
-import { CommonModule } from '@angular/common';
-import { ${upperName}Component } from './${inputName}.component';${params.includes('Routing')? `\n\nimport { ${upperName}RoutingModule } from './${inputName}-routing.module';` : ''}
 
-@NgModule({
-  imports: [${importCommonModule?'\n    CommonModule\n  ':''}${params.includes('Routing')? `,\n    ${upperName}RoutingModule`:''}],
-  declarations: [${upperName}Component]
+@Module({
+  imports: [TypeormModule.forFeature([])],
 })
 export class ${upperName}Module { }
