--- a/templates/entity.tmpl
+++ b/templates/entity.tmpl
@@ -1,3 +1,6 @@
-@Entity()
+import { Entity, PrimaryGeneratedColumn } from 'typeorm';
+
+@Entity('${upperName}')
 export class ${upperName}Entity {
+    @PrimaryGeneratedColumn() id:string;
 }
