--- a/templates/controller-gis.tmpl
+++ b/templates/controller-gis.tmpl
@@ -2,9 +2,10 @@ import { Controller } from '@nestjs/common';
 import { Crud } from '@nestjsx/crud';
 import { ${upperName}Service } from './${inputName}.service';
 import { ${upperName}Entity } from './${inputName}.entity';
-import { RouteMetadata } from 'nestjs-gis'
+import { RouteMetadata, GISCrud } from 'nestjs-gis'
 
 @RouteMetadata()
+@GISCrud()
 @Crud({
     model:{type:${upperName}Entity},
     params:{
